# whisper_ros

./: .gitignore  .gitmodules  CITATION.cff  Dockerfile  LICENSE  README.md  classsilero__vad_1_1VadIterator-members.html  classsilero__vad_1_1VadIterator.html  dependencies.repos  dir_000003_000000.html  dir_000004_000000.html  dir_040830ff7811f82bc40460e578806e04.html  dir_040830ff7811f82bc40460e578806e04_dep.map  dir_4deffd19f8d3835ce059a56bfc51b01f_dep.map  dir_c1f5ae4053fc2e24b63652be6d05a22b_dep.md5  dir_c75492417844c9840297d2fad901d317.html  dir_c75492417844c9840297d2fad901d317_dep.map  dir_f82db28dbe7adbe0ae206a6b42adad9f.html  download__model_8cpp.html  download__model_8cpp__incl.map  download__model_8cpp__incl.md5  doxygen_crawl.html  functions.html  functions_func.html  functions_vars.html  index.html  logs_8hpp.html  logs_8hpp__dep__incl.md5  model__download_8hpp.html  model__download_8hpp__incl.map  model__download_8hpp__incl.md5  model__download_8hpp_source.html  namespacemembers.html  namespacemembers_func.html  namespacewhisper__utils.html  requirements.txt  silero__vad__node_8cpp.html  silero__vad__node_8cpp__incl.map  silero__vad__node_8cpp__incl.md5  silero__vad__node_8hpp_source.html  (+6 more)
.github/: Doxyfile
3.2.0/: classsilero__vad_1_1SileroVadNode__coll__graph.md5  classsilero__vad_1_1Timestamp-members.html  classsilero__vad_1_1VadIterator__coll__graph.map  classwhisper__demos_1_1whisper__demo__node_1_1WhisperDemoNode__inherit__graph.map  classwhisper__ros_1_1Whisper.html  classwhisper__ros_1_1WhisperBaseNode.html  classwhisper__ros_1_1WhisperNode__coll__graph.map  classwhisper__ros_1_1WhisperNode__coll__graph.md5  classwhisper__ros_1_1WhisperNode__inherit__graph.md5  classwhisper__ros_1_1WhisperServerNode-members.html  classwhisper__ros_1_1WhisperServerNode__coll__graph.map  classwhisper__ros_1_1Whisper__coll__graph.md5  dir_586481226d90c59fb5a548e301e6ae09.html  dir_643af657297c450ecc0e105ad0a51fff_dep.md5  dir_c1dfbe3a12b523c3c811ec00f6683df6.html  dir_c1dfbe3a12b523c3c811ec00f6683df6_dep.md5  dir_de64f7990176dd23ddd40dc9a8cddb57.html  download__model_8cpp.html  globals_func.html  index.html  inherit_graph_3.map  logs_8hpp_source.html  model__download_8hpp.html  model__download_8hpp__dep__incl.md5  namespacewhisper__demos.html  namespacewhisper__utils.html  vad__iterator_8hpp__dep__incl.md5  whisper__base__node_8hpp_source.html  whisper__server__main_8cpp__incl.map  whisper__server__node_8hpp_source.html
3.2.1/: classsilero__vad_1_1SileroVadNode__coll__graph.map  classsilero__vad_1_1Timestamp.html  classwhisper__demos_1_1whisper__demo__node_1_1WhisperDemoNode-members.html  classwhisper__ros_1_1Whisper-members.html  classwhisper__ros_1_1WhisperBaseNode__inherit__graph.md5  classwhisper__ros_1_1WhisperServerNode__coll__graph.md5  dir_000010_000000.html  dir_26ed033f506067c3fbb60739d0684ba5.html  dir_4deffd19f8d3835ce059a56bfc51b01f.html  dir_643af657297c450ecc0e105ad0a51fff.html  dir_ad73551a077aaf6f4faa0609b2146bf8.html  files.html  functions_type.html  index.html  inherit_graph_2.map  inherit_graph_5.map  logs_8cpp.html  namespacesilero-vad.html  structTranscriptionOutput.html  structTranscriptionOutput__coll__graph.map  timestamp_8cpp.html  timestamp_8hpp_source.html  whisper__node_8hpp__dep__incl.md5
3.2.2/: classsilero__vad_1_1SileroVadNode-members.html  classwhisper__ros_1_1WhisperBaseNode__coll__graph.map  classwhisper__ros_1_1WhisperNode__inherit__graph.map  classwhisper__ros_1_1Whisper__coll__graph.map  dir_643af657297c450ecc0e105ad0a51fff_dep.map  dir_cd47a8739dbb2d10a14fa456f0cdf016_dep.map  globals_defs.html  model__download_8hpp__dep__incl.map  silero__vad__node_8hpp.html  vad__iterator_8cpp.html
3.2.3/: classwhisper__ros_1_1WhisperBaseNode-members.html  classwhisper__ros_1_1WhisperBaseNode__coll__graph.md5  dir_040830ff7811f82bc40460e578806e04_dep.md5  dir_cd47a8739dbb2d10a14fa456f0cdf016.html  doxygen_crawl.html  hierarchy.html  index.html  logs_8hpp.html  menudata.js  namespacemembers_enum.html  namespacemembers_type.html  namespacewhisper__demos_1_1whisper__demo__node.html  silero-vad_8launch_8py.html  silero__vad__main_8cpp.html  vad__iterator_8hpp.html  whisper_8cpp__incl.md5  whisper__main_8cpp.html  whisper__main_8cpp__incl.map  whisper__node_8hpp__dep__incl.map  whisper__server__main_8cpp.html  whisper__server__node_8cpp.html
3.2.4/: README_8md.html  ____init_____8py.html  classwhisper__demos_1_1whisper__demo__node_1_1WhisperDemoNode.html  classwhisper__ros_1_1WhisperServerNode.html  classwhisper__ros_1_1WhisperServerNode__inherit__graph.map  dir_000012_000000.html  dir_2411222d4252a55f4fcdfdf5d11ba55c.html  dir_de64f7990176dd23ddd40dc9a8cddb57_dep.md5  dir_f82db28dbe7adbe0ae206a6b42adad9f_dep.map  globals.html  graph_legend.html  index.html  inherits.html  (+16 more)
whisper_cpp_vendor/: CMakeLists.txt  package.xml
whisper_demos/: CMakeLists.txt  package.xml
whisper_demos/whisper_demos/: whisper_demo_node.py
whisper_msgs/: CMakeLists.txt  package.xml
whisper_msgs/action/: STT.action
whisper_msgs/msg/: GrammarConfig.msg  Transcription.msg
whisper_msgs/srv/: SetGrammar.srv  SetInitPrompt.srv
whisper_onnxruntime_vendor/: CMakeLists.txt  package.xml
whisper_ros/: CMakeLists.txt  package.xml
whisper_ros/include/silero_vad/: silero_vad_node.hpp  timestamp.hpp  vad_iterator.hpp
whisper_ros/include/whisper_ros/: grammar-parser.hpp  logs.hpp  whisper.hpp  whisper_base_node.hpp  whisper_node.hpp  whisper_server_node.hpp
whisper_ros/include/whisper_utils/: logs.hpp  model_download.hpp
whisper_ros/src/: grammar-parser.cpp  silero_vad_main.cpp  whisper.cpp  whisper_base_node.cpp  whisper_main.cpp  whisper_node.cpp  whisper_server_main.cpp  whisper_server_node.cpp
whisper_ros/src/silero_vad/: silero_vad_node.cpp  timestamp.cpp  vad_iterator.cpp
whisper_ros/src/whisper_ros/: logs.cpp  whisper.cpp  whisper_base_node.cpp  whisper_node.cpp  whisper_server_node.cpp
whisper_ros/src/whisper_utils/: download_model.cpp  logs.cpp
whisper_ros/whisper_ros/: silero_vad_node.py  whisper_client_node.py  whisper_manager_node.py
(+447 files in other folders)
