<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>whisper_demos</name>
  <version>3.2.1</version>
  <description>Demos package for whisper_ros</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>audio_common</depend>
  <depend>audio_common_msgs</depend>
  <depend>whisper_msgs</depend>
  <depend>whisper_cpp_vendor</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>